--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <main class="container">
         <section class="wrapper">
             <h1>FizzBuzz</h1>
+            <div>
+                <input type="button" id="startButton" value="Push me!">
+            </div>
+        </section>
+        <section id="cardBoard" class="wrapper">
+
+
         </section>
     </main>
 
