aggiunto innerHTML per evitare che il programma si "sommi"

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
                 <input type="button" id="startButton" value="Push me!">
             </div>
         </section>
-        <section id="cardBoard" class="wrapper">
-
+        <section id="cardBoard" class="card-wrapper">
 
         </section>
     </main>
